# ProjetJeuxEchecs

./: CMakeLists.txt  CMakeUserPresets.json  ProjetJeuxEchecs.cpp  ProjetJeuxEchecs.h  ProjetJeuxEchecs.ui  ProjetJeuxEchecs.vcxproj  ProjetJeuxEchecs.vcxproj.filters  RAII.cpp  RAII.hpp  README.md  TestJeuxEchecs.cpp  echiquier.cpp  echiquier.hpp  main.cpp  piece.cpp  piece.hpp
